[package]
name = "lifers-raylib"
description = "Raylib frontend for lifers"
repository = "https://github.com/Froloket64/lifers-raylib.git"
version = "0.1.0"
license = "MIT"
edition = "2021"
keywords = ["cellular_automata", "game_of_life"]
categories = ["simulation"]

[dependencies]
lifers = "0.2.1"
raylib = "5.0.1"

[dev-dependencies]
rand = "0.8.5"
