[package]
name = "lifers-raylib"
description = "Raylib frontend for lifers"
repository = "https://github.com/Froloket64/lifers-raylib.git"
version = "0.1.1"
license = "MIT"
edition = "2021"
keywords = ["cellular_automata", "game_of_life"]
categories = ["simulation"]

[dependencies]
lifers = "0.3.0"
raylib = "5.0.1"
rustc-hash = "2.0.0"

[dev-dependencies]
rand = "0.8.5"
